--- a/index.html
+++ b/index.html
@@ -4,41 +4,46 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kelly’s Page</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
-    <h1>Hi, I'm Kelly — I hike, draw, and find joy in small things 🌿</h1>
-    <p>This page is a personal space. No projects. Just presence.</p>
+    <header>
+      <h1>Hi, I'm Kelly 🌿</h1>
+      <p>Hiker. Artist. Joy Collector. Welcome to my cozy corner of the internet.</p>
+    </header>
 
-    <section>
+    <section class="art">
       <h2>🎨 My Art</h2>
-      <p>I make messy, colorful things — with pixels or pens, whatever’s closest.</p>
-      <img src="art.jpg" alt="Example artwork" style="max-width: 100%; border-radius: 10px;" />
+      <p>I create layered, expressive, and colorful pieces — digital and traditional. Here’s a peek:</p>
+      <img src="https://images.unsplash.com/photo-1616627568032-3b6e66080bd7" alt="Colorful abstract art" />
     </section>
 
-    <section>
+    <section class="hiking">
       <h2>🥾 Why I Hike</h2>
-      <p>To breathe. To reset. To feel small under big skies.</p>
+      <p>Nature resets everything. Here are some places that stole my breath and gave me peace:</p>
       <ul>
-        <li>Lost Maples, TX</li>
-        <li>Mount Tam, CA</li>
-        <li>Enchanted Rock</li>
+        <li>🏞️ Lost Maples, TX</li>
+        <li>🌲 Mount Tam, CA</li>
+        <li>🪨 Enchanted Rock</li>
       </ul>
     </section>
 
-    <section>
+    <section class="joys">
       <h2>🍓 Tiny Joys</h2>
-      <ul>
-        <li>🫐 Blueberry muffins with crunchy tops</li>
-        <li>🌙 Walking under full moons</li>
-        <li>🧺 The smell of sun-dried laundry</li>
-        <li>🎶 A good playlist with no skips</li>
-      </ul>
+      <div class="joy-grid">
+        <div>🫐 Crunchy blueberry muffins</div>
+        <div>🌙 Full moon walks</div>
+        <div>🎶 No-skip playlists</div>
+        <div>🧺 Sun-dried laundry</div>
+        <div>📮 Handwritten letters</div>
+        <div>🪷 The smell of wet soil</div>
+      </div>
     </section>
 
     <footer>
-      <p>Thanks for stopping by. Say hi if you want ✨</p>
+      <p>Thanks for visiting 🌼 Want to connect? Leave a message by the trail.</p>
     </footer>
   </main>
 </body>
